--- a/Index.html
+++ b/Index.html
@@ -357,6 +357,11 @@ display: none;
 </div>
 
 
+<p>git status #checks current status of repository</p>
+<p>git add -A #adds altered and untracked files to staging area</p>
+<p>git commit -am “<message>” #commit changes with message</p>
+<p>git push #push committed changes up to GitHub</p>
+<p>git pull #pull any changes from GitHub down to local repo</p>
 <div id="r-markdown" class="section level2">
 <h2>R Markdown</h2>
 <p>This is an R Markdown document. Markdown is a simple formatting
